data/derived/sp14/progs/unify/prog1389.ml.out
Characters 280-281:
  | Thresh  (x,y,z,w) -> Printf.sprintf "%s<%s?%s:" x y z;;
                                                    ^
Error: This expression has type expr but an expression was expected of type
         string
